# understudy

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  osv.yml
docs/: hero-demo.md  recording-loom.md
evals/: fixture_server.py  run_eval.py
evals/cases/: google_search.yaml  repo_triage.yaml
evals/fixtures/: repo.html  repo_renamed.html  repo_reordered.html  repo_triage_recipe.json  repo_wrapped.html
scripts/: build-ui.sh  render_demo_svg.py
tests/: test_allowlist.py  test_aria.py  test_capture_origins.py  test_eval_harness.py  test_induction_loader.py  test_redact.py  test_server.py  test_types.py
tests/replay/: test_egress.py  test_engine.py  test_engine_allowlist.py  test_grounding.py  test_hitl_rules.py  test_notes.py  test_params.py  test_substitute.py
understudy/: __init__.py  cli.py  config.py  db.py  schema.sql  types.py
understudy/capture/: __init__.py  aria.py  browser.py
understudy/induction/: __init__.py  induce.py  prompts.py
understudy/memory/: __init__.py
understudy/replay/: __init__.py  actions.py  audit.py  batch.py  checks.py  egress.py  engine.py  grounding.py  hitl_rules.py  notes.py  params.py  result.py  substitute.py  ui.py
understudy/security/: __init__.py  allowlist.py  hitl.py  redact.py
understudy/server/: __init__.py  app.py  resynth.py  schemas.py  security.py
understudy/server/routes/: recipes.py
understudy/server/static/: index.html
understudy/server/static/assets/: index-8BJDzkmQ.js  index-Bf9x7X2c.js  index-CRG3d1A5.css  index-DpAS2-xv.js  index-DqWF0SI2.css  index-ZeHfy6pY.css
understudy/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
understudy/ui/src/: App.tsx  index.css  main.tsx
understudy/ui/src/components/: StepEditor.tsx  StepNode.tsx
understudy/ui/src/lib/: api.ts  csrf.ts  types.ts
understudy/ui/src/routes/: RecipeGraph.tsx  RecipeList.tsx
