[project]
name = "understudy"
version = "0.0.1"
description = "Records a workflow once. Replays it with variations you can edit like code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sai Anurag" }]
keywords = ["agent", "computer-use", "automation", "claude", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.39.0",
    "playwright>=1.47.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.5",
    "rich>=13.8.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "keyring>=25.0.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.362",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mac = [
    "pyobjc-core>=10.3",
    "pyobjc-framework-Cocoa>=10.3",
    "pyobjc-framework-Quartz>=10.3",
    "pyobjc-framework-ApplicationServices>=10.3",
    "pyobjc-framework-ScreenCaptureKit>=10.3",
    "pyobjc-framework-Vision>=10.3",
    "pynput>=1.7.7",
]
crypto = [
    # SQLCipher requires a system libsqlcipher; install via `brew install sqlcipher`.
    # Skipped from base deps because the wheel is fragile on Apple Silicon.
    "sqlcipher3-binary>=0.5.4",
]

[project.scripts]
understudy = "understudy.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.5.2",
    "ruff>=0.6.9",
    "basedpyright>=1.18.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.3",
    "bandit>=1.7.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["understudy"]

[tool.hatch.build.targets.wheel.force-include]
"understudy/schema.sql" = "understudy/schema.sql"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF", "S", "ASYNC"]
ignore = ["S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"evals/**" = ["S"]

[tool.basedpyright]
include = ["understudy", "tests", "evals"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
